hphp/hack/test/typecheck/this/fun_param.php
<?hh

function foo(int $this): void {}

function bar(int $other, int ...$this): void {}
